--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ h1 {
 }
 
 div {
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
 }
 
 #description {
@@ -28,7 +28,32 @@ div {
 #survey-form {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  
+}
+
+.text-right {
+  text-align: right;
+  padding-right: 15px;
+}
+
+#dropdown {
+  margin-right: 15px;
+}
+
+.fill-column {
+  grid-column: 1/3;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+textarea {
+  margins: 15px;
+  padding: 15px;
+}
+
+#submit-div {
+  margin: 0 10px 0 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .input-box {
